--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -36,32 +36,75 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CvJ-cx-GbG" customClass="TagListView" customModule="TagListView">
-                                <rect key="frame" x="179" y="41" width="242" height="24"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="tagBackgroundColor">
-                                        <color key="value" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
-                                        <color key="value" red="0.96470588239999999" green="0.97254901959999995" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="9"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="enableRemoveButton" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="paddingY">
-                                        <real key="value" value="6"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gb-Rr-6KO">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kr0-pV-KoN">
+                                        <rect key="frame" x="0.0" y="0.0" width="608" height="79"/>
+                                        <subviews>
+                                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CvJ-cx-GbG" customClass="TagListView" customModule="TagListView">
+                                                <rect key="frame" x="8" y="28" width="552" height="24"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="552" id="PHE-bI-Ymq"/>
+                                                    <constraint firstAttribute="height" constant="24" id="vNr-zb-9LK"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="tagBackgroundColor">
+                                                        <color key="value" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                                        <color key="value" red="0.96470588239999999" green="0.97254901959999995" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="9"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="enableRemoveButton" value="YES"/>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="paddingY">
+                                                        <real key="value" value="6"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="79" id="6cC-hT-5YK"/>
+                                            <constraint firstItem="CvJ-cx-GbG" firstAttribute="leading" secondItem="Kr0-pV-KoN" secondAttribute="leading" constant="8" id="Im6-cC-1lV"/>
+                                            <constraint firstAttribute="width" constant="608" id="O53-om-scK"/>
+                                            <constraint firstItem="CvJ-cx-GbG" firstAttribute="centerY" secondItem="Kr0-pV-KoN" secondAttribute="centerY" id="OkF-Ob-6il"/>
+                                            <constraint firstAttribute="width" secondItem="CvJ-cx-GbG" secondAttribute="width" id="SgT-u2-mZU"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="Ybd-hJ-KWK"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Ybd-hJ-KWK"/>
+                                                <exclude reference="SgT-u2-mZU"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Kr0-pV-KoN" firstAttribute="top" secondItem="0gb-Rr-6KO" secondAttribute="top" id="5ys-Px-iXV"/>
+                                    <constraint firstAttribute="trailing" secondItem="Kr0-pV-KoN" secondAttribute="trailing" id="SA1-fY-cP1"/>
+                                    <constraint firstItem="Kr0-pV-KoN" firstAttribute="leading" secondItem="0gb-Rr-6KO" secondAttribute="leading" id="UGa-fz-cV1"/>
+                                    <constraint firstAttribute="bottom" secondItem="Kr0-pV-KoN" secondAttribute="bottom" id="VSD-Iv-6YI"/>
+                                    <constraint firstAttribute="height" constant="79" id="fMn-6Z-bqN"/>
+                                    <constraint firstAttribute="bottom" secondItem="Kr0-pV-KoN" secondAttribute="bottom" id="m3e-qO-6R5"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="VSD-Iv-6YI"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CvJ-cx-GbG" firstAttribute="centerX" secondItem="Zpo-OK-WTQ" secondAttribute="centerX" id="2cl-xL-t0d"/>
                             <constraint firstItem="UQh-0P-704" firstAttribute="centerX" secondItem="Zpo-OK-WTQ" secondAttribute="centerX" id="88B-1s-YQz"/>
-                            <constraint firstItem="CvJ-cx-GbG" firstAttribute="top" secondItem="OXw-Kc-WVv" secondAttribute="bottom" constant="21" id="XOK-2Y-ddL"/>
+                            <constraint firstItem="0gb-Rr-6KO" firstAttribute="top" secondItem="Zpo-OK-WTQ" secondAttribute="top" id="RbJ-D7-jOS"/>
+                            <constraint firstAttribute="trailing" secondItem="0gb-Rr-6KO" secondAttribute="trailing" id="kKu-cd-c1g"/>
                             <constraint firstItem="UQh-0P-704" firstAttribute="centerY" secondItem="Zpo-OK-WTQ" secondAttribute="centerY" id="rFA-Qa-6Eo"/>
+                            <constraint firstItem="0gb-Rr-6KO" firstAttribute="leading" secondItem="Zpo-OK-WTQ" secondAttribute="leading" id="zfb-Bp-HUC"/>
                         </constraints>
                     </view>
                     <connections>
@@ -71,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ggu-Iv-tXK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-259" y="442"/>
+            <point key="canvasLocation" x="-280" y="402"/>
         </scene>
         <!--Delegate-->
         <scene sceneID="mDN-x0-sAl">
