--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -37,7 +37,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gb-Rr-6KO">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="79"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kr0-pV-KoN">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="79"/>
@@ -97,15 +97,34 @@
                                     </mask>
                                 </variation>
                             </scrollView>
+                            <searchBar contentMode="redraw" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="O5n-IP-wgv">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="N3w-H8-7gg"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vSA-UM-BZe" id="KFT-Ew-9ha"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="UQh-0P-704" firstAttribute="centerX" secondItem="Zpo-OK-WTQ" secondAttribute="centerX" id="88B-1s-YQz"/>
+                            <constraint firstItem="O5n-IP-wgv" firstAttribute="top" secondItem="OXw-Kc-WVv" secondAttribute="bottom" id="NZa-KM-xU8"/>
                             <constraint firstItem="0gb-Rr-6KO" firstAttribute="top" secondItem="Zpo-OK-WTQ" secondAttribute="top" id="RbJ-D7-jOS"/>
+                            <constraint firstItem="O5n-IP-wgv" firstAttribute="leading" secondItem="Zpo-OK-WTQ" secondAttribute="leading" id="d66-Nf-OMr"/>
                             <constraint firstAttribute="trailing" secondItem="0gb-Rr-6KO" secondAttribute="trailing" id="kKu-cd-c1g"/>
+                            <constraint firstItem="0gb-Rr-6KO" firstAttribute="top" secondItem="O5n-IP-wgv" secondAttribute="bottom" id="qVH-VM-oFp"/>
                             <constraint firstItem="UQh-0P-704" firstAttribute="centerY" secondItem="Zpo-OK-WTQ" secondAttribute="centerY" id="rFA-Qa-6Eo"/>
+                            <constraint firstAttribute="trailing" secondItem="O5n-IP-wgv" secondAttribute="trailing" id="wn7-3e-rh7"/>
                             <constraint firstItem="0gb-Rr-6KO" firstAttribute="leading" secondItem="Zpo-OK-WTQ" secondAttribute="leading" id="zfb-Bp-HUC"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="RbJ-D7-jOS"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="tagChoicesView" destination="UQh-0P-704" id="lRc-Yr-eoj"/>
